improve get results JSON