@@ -46,7 +46,7 @@ public abstract class AbstractProducer<E> extends AbstractEntity implements IPro
 	protected RequestOptions fileOptions;
 	public IOperation<E> operation;
 	private Set<IRunner> runners = new HashSet<>();
-	protected ArrayList<E> result;
+	protected ArrayList<E> result = new ArrayList<>();
 
 	public AbstractProducer() {
 		this.setMetadata("role", "producer");
@@ -104,15 +104,9 @@ public abstract class AbstractProducer<E> extends AbstractEntity implements IPro
 	// return
 	public String getResultJSONString() {
 		JsonArray jsonArray = new JsonArray();
-		if (this.result == null) {
-			return null;
-		} else if (this.result.size() > 0 && this.result.get(0) instanceof JsonObject) {
-			for (E el : this.result) {
-				jsonArray.add((JsonObject) el);
-			}
-		} else if (this.result.size() > 0 && this.result.get(0) instanceof JsonElement) {
-			for (E el : this.result) {
-				jsonArray.add((JsonElement) el);
+		if (!this.result.isEmpty() && this.result.getFirst() instanceof JsonElement) {
+			for (E element : this.result) {
+				jsonArray.add((JsonElement) element);
 			}
 		} else {
 			JsonObject result = new JsonObject();
